--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@react-navigation/native-stack": "^7.2.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.0",
+    "react-native-share": "^12.0.9",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
