--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,13 +77,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.kck"
+    namespace "com.Edu"
     defaultConfig {
-        applicationId "com.kck"
+        applicationId "com.Edu"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "0.0.3"
     }
     signingConfigs {
         debug {
@@ -92,17 +92,30 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file(getProperty("MYAPP_RELEASE_STORE_FILE"))
+            storePassword getProperty("MYAPP_RELEASE_STORE_PASSWORD")
+            keyAlias getProperty("MYAPP_RELEASE_KEY_ALIAS")
+            keyPassword getProperty("MYAPP_RELEASE_KEY_PASSWORD")
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            def appName = "Edu"  // Replace with your app name if needed
+            def version = defaultConfig.versionName  // Correctly reference versionName
+            // Set the APK name format
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def fileName = "${appName}_${version}.apk"
+                    output.outputFileName = fileName
+                }
+            }
         }
     }
 }
