--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KCK",
+  "name": "Edu",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build:android": "node incrementVersionCode.js && cd android && gradlew assembleRelease"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
